* run the workflow on pull request event

--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -1,6 +1,8 @@
 name: Build OpenSSL Arm64
 
 on:
+  pull_request:
+    branches: [ "master" ]
   workflow_dispatch:
     inputs:
       openssl_build:
