* check folder presence before deleting

--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -65,7 +65,7 @@ jobs:
     
     - name: Build OpenSSL Aarch64
       run: |
-        rm -R openssl
+        [ -d openssl ] && rm -R openssl
         git clone https://github.com/openssl/openssl.git --single-branch --depth 1
         cd openssl
         ./Configure
