--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -2,7 +2,7 @@ name: Build OpenSSL Arm64
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: [ "dev" ]
   workflow_dispatch:
     inputs:
       branch:
