--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -1,6 +1,8 @@
 name: Sync and validate master branch on Arm64 Windows
 
 on:
+  pull_request:
+    branches: [ "dev" ]
   workflow_dispatch:
   schedule:
     - cron: "0 3 * * *"
