* fetch origin dev before checkout files

--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -41,7 +41,8 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git checkout origin/dev -- .github/workflows/scripts
+        git fetch origin dev
+        git checkout dev -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -65,7 +66,8 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git checkout origin/dev -- .github/workflows/scripts
+        git fetch origin dev
+        git checkout dev -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -87,7 +89,8 @@ jobs:
 
     - name: Build OpenSSL on Linux AArch64 with GCC
       run: |
-        git checkout origin/dev -- .github/workflows/scripts
+        git fetch origin dev
+        git checkout dev -- .github/workflows/scripts
         ./Configure
         make
         make test
