* replace branch name with github variable

--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -41,8 +41,8 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git fetch origin dev
-        git checkout origin/dev -- .github/workflows/scripts
+        git fetch origin ${{ github.ref }}
+        git checkout origin/${{ github.ref }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -66,8 +66,8 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git fetch origin dev
-        git checkout origin/dev -- .github/workflows/scripts
+        git fetch origin ${{ github.ref }}
+        git checkout origin/${{ github.ref }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -89,8 +89,8 @@ jobs:
 
     - name: Build OpenSSL on Linux AArch64 with GCC
       run: |
-        git fetch origin dev
-        git checkout origin/dev -- .github/workflows/scripts
+        git fetch origin ${{ github.ref }}
+        git checkout origin/${{ github.ref }} -- .github/workflows/scripts
         ./Configure
         make
         make test
