--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -146,7 +146,7 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
       with:
-        branch: ${{ github.event.repository.default_branch }}
+        ref: ${{ github.event.repository.default_branch }}
 
 #    - uses: actions/download-artifact@v3
 #    with:
@@ -163,7 +163,7 @@ jobs:
         touch .github/test.txt
         git checkout -b benchmark_snapshot
         git add .github/test.txt
-        git commit -am "-add a benchmark snapshot"
+        git commit -am "* add a benchmark snapshot"
         git push --force origin benchmark_snapshot
         PR_RESPONSE=$(curl -X POST -H "Authorization: token $GITHUB_TOKEN" \
           -d '{ \
