--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -61,15 +61,15 @@ jobs:
         perl Configure VC-WIN64-ARM
         nmake
         nmake test
-        call .github\workflows\scripts\benchmark.bat 2> benchmark.txt
-        type benchmark.txt
+        call .github\workflows\scripts\benchmark.bat 2> benchmark_arm64_msvc.txt
+        type benchmark_arm64_msvc.txt
 
-    - name: Archive build-openssl-windows-arm64-msvc.zip
+    - name: Archive openssl_windows_arm64_msvc_benchmark.zip
       uses: actions/upload-artifact@v3
       if: ${{ inputs.benchmark_snapshot }}
       with:
-        name: build-openssl-windows-arm64-msvc.zip
-        path: benchmark.txt
+        name: openssl_windows_arm64_msvc_benchmark.zip
+        path: benchmark_arm64_msvc.txt
         retention-days: 3
 
   build-openssl-windows-arm64-clangcl:
@@ -96,15 +96,15 @@ jobs:
         perl Configure VC-CLANG-WIN64-CLANGASM-ARM
         nmake
         nmake test
-        call .github\workflows\scripts\benchmark.bat 2> benchmark.txt
-        type benchmark.txt
+        call .github\workflows\scripts\benchmark.bat 2> benchmark_arm64_clangcl.txt
+        type benchmark_clangcl.txt
 
-    - name: Archive build-openssl-windows-arm64-clangcl.zip
+    - name: Archive openssl_windows_arm64_clangcl_benchmark.zip
       uses: actions/upload-artifact@v3
       if: ${{ inputs.benchmark_snapshot }}
       with:
-        name: build-openssl-windows-arm64-clangcl.zip
-        path: benchmark.txt
+        name: openssl_windows_arm64_clangcl_benchmark.zip
+        path: benchmark_arm64_clangcl.txt
         retention-days: 3
 
   build-openssl-linux-aarch64-gcc:
@@ -126,15 +126,15 @@ jobs:
         ./Configure
         make
         make test
-        .github/workflows/scripts/benchmark.sh > benchmark.txt 2>&1
-        cat benchmark.txt
+        .github/workflows/scripts/benchmark.sh > benchmark_aarch64_gcc.txt 2>&1
+        cat benchmark_aarch64_gcc.txt
 
-    - name: Archive openssl-linux-aarch64-gcc-benchmark.zip
+    - name: Archive openssl_linux_aarch64_gcc_benchmark.zip
       uses: actions/upload-artifact@v3
       if: ${{ inputs.benchmark_snapshot }}
       with:
-        name: openssl-linux-aarch64-gcc-benchmark.zip
-        path: benchmark.txt
+        name: openssl_linux_aarch64_gcc_benchmark.zip
+        path: benchmark_aarch64_gcc.txt
         retention-days: 3
 
   create_benchmark_snapshot:
@@ -148,9 +148,9 @@ jobs:
       with:
         ref: ${{ github.event.repository.default_branch }}
 
-#    - uses: actions/download-artifact@v3
-#    with:
-#      name: openssl-linux-aarch64-gcc-benchmark.zip
+    - uses: actions/download-artifact@v3
+    with:
+      name: openssl_linux_aarch64_gcc_benchmark.zip
 
 #    - uses: actions/download-artifact@v3
 #    with:
@@ -160,17 +160,23 @@ jobs:
       run: |
         git config --global user.name "$GITHUB_ACTOR"
         git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
-        touch .github/test.txt
+        unzip openssl_linux_aarch64_gcc_benchmark.zip
+        .github/workflows/scripts/benchmark_snapshot.sh
+        benchmark_asset=$(date +".assets/benchmark_snapshot_%Y-%m-%d_%H_%M_%S.png")
+        mv benchmark_snapshot.png $benchmark_asset
+        git add $benchmark_asset
+        git commit -am "* add a benchmark image"
+        git push
         git checkout -b benchmark_snapshot
-        git add .github/test.txt
+        git add .github/workflows/data
         git commit -am "* add a benchmark snapshot"
         git push --force origin benchmark_snapshot
         PR_RESPONSE=$(curl -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -d '{
             "title": "Add benchmark snapshot",
-            "body": "",
+            "body": "![image](https://raw.githubusercontent.com/Windows-on-ARM-Experiments/openssl/assets/$benchmark_asset)",
             "head": "benchmark_snapshot",
             "base": "${{ github.event.repository.default_branch }}"
           }' \
-          https://api.github.com/repos/$GITHUB_REPOSITORY/pulls)
+          https://api.github.com/repos/$GITHUB_REPOSITORY/pull/7)
         echo "$PR_RESPONSE"
