--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -148,9 +148,10 @@ jobs:
       with:
         ref: ${{ github.event.repository.default_branch }}
 
-    - uses: actions/download-artifact@v3
-    with:
-      name: openssl_linux_aarch64_gcc_benchmark.zip
+    - name: Dowload openssl_linux_aarch64_gcc_benchmark.zip
+      uses: actions/download-artifact@v3
+      with:
+        name: openssl_linux_aarch64_gcc_benchmark.zip
 
 #    - uses: actions/download-artifact@v3
 #    with:
