--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -139,14 +139,13 @@ jobs:
 
   create_benchmark_snapshot:
     if: ${{ inputs.benchmark_snapshot }}
+    needs: [build-openssl-windows-arm64-clangcl, build-openssl-linux-aarch64-gcc]
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Git checkout
       uses: actions/checkout@v3
-      with:
-        ref: ${{ github.event.repository.default_branch }}
 
     - name: Dowload openssl_linux_aarch64_gcc_benchmark.zip
       uses: actions/download-artifact@v3
@@ -161,10 +160,14 @@ jobs:
       run: |
         git config --global user.name "$GITHUB_ACTOR"
         git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
-        unzip openssl_linux_aarch64_gcc_benchmark.zip
+        git fetch origin ${{ github.event.repository.default_branch }}
+        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         .github/workflows/scripts/benchmark_snapshot.sh
         benchmark_asset=$(date +".assets/benchmark_snapshot_%Y-%m-%d_%H_%M_%S.png")
+        [ ! -d .assets ] && mkdir .assets
         mv benchmark_snapshot.png $benchmark_asset
+        git restore .github/workflows/scripts
+        git checkout assets
         git add $benchmark_asset
         git commit -am "* add a benchmark image"
         git push
