--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -158,6 +158,7 @@ jobs:
 
     - name: Create PR for a benchmark snapshot
       run: |
+        set -x
         git config --global user.name "$GITHUB_ACTOR"
         git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
         git fetch origin ${{ github.event.repository.default_branch }}
