--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -176,7 +176,7 @@ jobs:
         git push
         git checkout ${{ github.event.repository.default_branch }} --
         git checkout -b benchmark_snapshot
-        git add .github/workflows/data
+        git add .github/benchmark_snapshot
         git commit -am "* add a benchmark snapshot"
         git push --force origin benchmark_snapshot
         PR_RESPONSE=$(curl -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
