--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -182,7 +182,7 @@ jobs:
         PR_RESPONSE=$(curl -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -d '{
             "title": "Add benchmark snapshot",
-            "body": "![image](https://raw.githubusercontent.com/Windows-on-ARM-Experiments/openssl/assets/$benchmark_asset)",
+            "body": "![image](https://raw.githubusercontent.com/Windows-on-ARM-Experiments/openssl/assets/' $benchmark_asset ')",
             "head": "benchmark_snapshot",
             "base": "${{ github.event.repository.default_branch }}"
           }' \
