--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -139,7 +139,7 @@ jobs:
 
   create-benchmark-snapshot:
     if: ${{ inputs.benchmark_snapshot }}
-#    needs: [build-openssl-linux-aarch64-gcc]
+    needs: [build-openssl-windows-arm64-clangcl, build-openssl-linux-aarch64-gcc]
 
     runs-on: ubuntu-latest
 
@@ -147,14 +147,15 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
 
-#    - name: Dowload openssl_linux_aarch64_gcc_benchmark.zip
-#      uses: actions/download-artifact@v3
-#      with:
-#        name: openssl_linux_aarch64_gcc_benchmark.zip
+    - name: Dowload openssl_linux_aarch64_gcc_benchmark.zip
+      uses: actions/download-artifact@v3
+      with:
+        name: openssl_linux_aarch64_gcc_benchmark.zip
 
-#    - uses: actions/download-artifact@v3
-#    with:
-#      name: build-openssl-windows-arm64-clangcl.zip
+    - name: Dowload build-openssl-windows-arm64-clangcl.zip
+      uses: actions/download-artifact@v3
+      with:
+        name: build-openssl-windows-arm64-clangcl.zip
 
     - name: Create PR for a benchmark snapshot
       run: |
@@ -163,15 +164,13 @@ jobs:
         git fetch origin ${{ github.event.repository.default_branch }}
         git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         .github/workflows/scripts/benchmark_snapshot.sh
-        benchmark_asset=$(date +".assets/benchmark_snapshot_%Y-%m-%d_%H_%M_%S.png")
+        benchmark_asset=$(date +".assets/benchmark_snapshot_%Y-%m-%d_%H_%M_%S_gcc_vs_clangcl.png")
         [ ! -d .assets ] && mkdir .assets
-        mv benchmark_snapshot.png $benchmark_asset
-        git status
+        mv benchmark_snapshot_gcc_vs_clangcl.png $benchmark_asset
         git restore .github/workflows/scripts
         git fetch origin assets
         git checkout assets
         git add $benchmark_asset
-        git status
         git commit -am "* add a benchmark image"
         git push
         git checkout ${{ github.event.repository.default_branch }} --
