* fix branch name, master is not default branch anymore

--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -20,4 +20,4 @@ jobs:
     needs: sync-fork
     uses: ./.github/workflows/ci-arm64.yml
     with:
-      branch: ${{ github.ref }}
+      branch: master
