--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -165,7 +165,7 @@ jobs:
         git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
         git fetch origin ${{ github.event.repository.default_branch }}
         git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
-        .github/workflows/scripts/benchmark_snapshot.sh
+        . .github/workflows/scripts/benchmark_snapshot.sh
         benchmark_asset=$(date +".assets/benchmark_snapshot_%Y-%m-%d_%H_%M_%S_gcc_vs_clangcl.png")
         [ ! -d .assets ] && mkdir .assets
         mv benchmark_snapshot_gcc_vs_clangcl.png $benchmark_asset
