--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -46,8 +46,8 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git fetch Windows-on-ARM-Experiments/openssl ${{ github.event.repository.default_branch }}
+        git checkout Windows-on-ARM-Experiments/openssl/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -72,8 +72,8 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git fetch Windows-on-ARM-Experiments/openssl ${{ github.event.repository.default_branch }}
+        git checkout Windows-on-ARM-Experiments/openssl/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -96,8 +96,8 @@ jobs:
 
     - name: Build OpenSSL on Linux AArch64 with GCC
       run: |
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git fetch Windows-on-ARM-Experiments/openssl ${{ github.event.repository.default_branch }}
+        git checkout Windows-on-ARM-Experiments/openssl/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         ./Configure
         make
         make test
