--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -46,8 +46,9 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git fetch https://github.com/Windows-on-ARM-Experiments/openssl.git ${{ github.event.repository.default_branch }}
-        git checkout https://github.com/Windows-on-ARM-Experiments/openssl.git/openssl/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git remote add WoA https://github.com/Windows-on-ARM-Experiments/openssl.git
+        git fetch WoA ${{ github.event.repository.default_branch }}
+        git checkout WoA/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -72,8 +73,9 @@ jobs:
       shell: cmd
       run: |
         echo on
-        git fetch https://github.com/Windows-on-ARM-Experiments/openssl.git ${{ github.event.repository.default_branch }}
-        git checkout https://github.com/Windows-on-ARM-Experiments/openssl.git/openssl/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git remote add WoA https://github.com/Windows-on-ARM-Experiments/openssl.git
+        git fetch WoA ${{ github.event.repository.default_branch }}
+        git checkout WoA/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -96,8 +98,9 @@ jobs:
 
     - name: Build OpenSSL on Linux AArch64 with GCC
       run: |
-        git fetch https://github.com/Windows-on-ARM-Experiments/openssl.git ${{ github.event.repository.default_branch }}
-        git checkout https://github.com/Windows-on-ARM-Experiments/openssl.git/openssl/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git remote add WoA https://github.com/Windows-on-ARM-Experiments/openssl.git
+        git fetch WoA ${{ github.event.repository.default_branch }}
+        git checkout WoA/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         ./Configure
         make
         make test
