* sync master only after successful validation on master-verifycation   branch

--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -6,18 +6,29 @@ on:
     - cron: "0 3 * * *"
 
 jobs:
-  sync-fork:
+  sync-master:
     name: Sync master
+    needs: [validate-arm64-windows]
     runs-on: ubuntu-latest
 
     steps:
-      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b 75ac8f04b78e9e1283b0402a791728ba2728e159
+      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  sync-master-verification:
+    name: Sync master-verification
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master-verification
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   validate-arm64-windows:
+    needs: [sync-master-verification]
     name: Valitate the latest Arm64 Windows build
     needs: sync-fork
     uses: ./.github/workflows/ci-arm64.yml
     with:
-      branch: ${{ github.ref }}
+      branch: master-verification
