--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -6,9 +6,8 @@ on:
     - cron: "0 3 * * *"
 
 jobs:
-  sync-master:
+  sync-fork:
     name: Sync master
-    needs: validate-arm64-windows
     runs-on: ubuntu-latest
 
     steps:
@@ -16,18 +15,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  sync-master-verification:
-    name: Sync master-verification
-    runs-on: ubuntu-latest
-
-    steps:
-      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master-verification
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   validate-arm64-windows:
     name: Valitate the latest Arm64 Windows build
-    needs: sync-master-verification
+    needs: sync-fork
     uses: ./.github/workflows/ci-arm64.yml
     with:
-      branch: master-verification
+      branch: ${{ github.ref }}
