--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -71,7 +71,7 @@ jobs:
 
     - name: Archive openssl_windows_arm64_msvc_benchmark.zip
       uses: actions/upload-artifact@v3
-      if: ${{ inputs.benchmark} || ${{ inputs.benchmark_snapshot }}
+      if: ${{ inputs.benchmark }} || ${{ inputs.benchmark_snapshot }}
       with:
         name: openssl_windows_arm64_msvc_benchmark.zip
         path: benchmark_arm64_msvc.txt
@@ -106,7 +106,7 @@ jobs:
 
     - name: Archive openssl_windows_arm64_clangcl_benchmark.zip
       uses: actions/upload-artifact@v3
-      if: ${{ inputs.benchmark} || ${{ inputs.benchmark_snapshot }}
+      if: ${{ inputs.benchmark }} || ${{ inputs.benchmark_snapshot }}
       with:
         name: openssl_windows_arm64_clangcl_benchmark.zip
         path: benchmark_arm64_clangcl.txt
@@ -136,7 +136,7 @@ jobs:
 
     - name: Archive openssl_linux_aarch64_gcc_benchmark.zip
       uses: actions/upload-artifact@v3
-      if: ${{ inputs.benchmark} || ${{ inputs.benchmark_snapshot }}
+      if: ${{ inputs.benchmark }} || ${{ inputs.benchmark_snapshot }}
       with:
         name: openssl_linux_aarch64_gcc_benchmark.zip
         path: benchmark_aarch64_gcc.txt
