--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master
+      - run: sleep 30s; gh repo sync Windows-on-ARM-Experiments/openssl -b master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
